added final template

--- a/Saarthi/saarthi.html
+++ b/Saarthi/saarthi.html
@@ -63,7 +63,7 @@
 
   .captiona span.bordera {
     color: #fff;
-    font: 600 83px/1.3 'Lobster Two', Helvetica, sans-serif;
+    font: 600 83px/1.3 'Times New Roman', Helvetica, sans-serif;
     text-shadow: 1px 1px 0px #ededed, 4px 4px 0px rgba(0,0,0,0.15);
     letter-spacing: 10px;
   }
@@ -105,7 +105,8 @@
       font-family: Montserrat, sans-serif;
   }
   .container-fluid {
-      padding: 60px 50px;
+      padding: 10px 10px;
+      background-color: black;
   }
   .bg-grey {
       background-color: #f6f6f6;
@@ -290,7 +291,7 @@
 
 <div class="bgimg-2">
   <div class="caption">
-<div id="intro" class="container-fluid">
+<div id="intro" >
   <div class="row">
     <div class="col-sm-8">
       <div class="blacken ">
@@ -321,7 +322,6 @@
     </div><br>
 </div>
 <div id="theapp" class="container-fluid slideanim">
-  <h2>ALL ABOUT APP</h2>
   <div id="myCarousel" class="carousel slide text-center" data-ride="carousel">
     <!-- Indicators -->
     <ol class="carousel-indicators">
@@ -332,7 +332,6 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner slideanim" role="listbox">
       <div class="item active">
-        <h4>THE CITIZEN END </h4>
       <span>
       <div class="col-sm-6">
         <img src="r2.jpg"></div>
@@ -342,7 +341,6 @@
   </div>
 
       <div class="item">
-        <h4>THE MUNICIPAL END </h4>
         <span>
         <div class="col-sm-6">
           <img src="highway.jpg"></div>
@@ -379,8 +377,8 @@
     </div>
 
 <!-- Add Google Maps -->
-<div id="googleMap" style="height:600px;width:100%;">
-<iframe width="100%" height="600"frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJo8u6KgI3nDkRf0jB5XjA1oM&key=AIzaSyDxEEmSYwfpY9gWjhNBO-b-Q-5ZdW3yi6o" allowfullscreen></iframe>
+<div id="googleMap" style="height:300px;width:100%;">
+<iframe width="100%" height="300"frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJo8u6KgI3nDkRf0jB5XjA1oM&key=AIzaSyDxEEmSYwfpY9gWjhNBO-b-Q-5ZdW3yi6o" allowfullscreen></iframe>
 </div>
 
 
